hermes_fuzz_executed/fuzz_27_execution
'use strict';
 
 
 
let [a, b,...c] = [1, 2, 3];
let mutated = [1, 2, 3];
let [d, e] = mutated;
let [f,...g] = mutated;
let [h = 1,...i] = mutated;
let [j,...k] = [1, 2, 3];
 
 
 
let [l,...m] = [1, 2, 3];
let mutatedArgs = [1, 2, 3];
let [{ default: defaultRest }, { rest = defaultRest }] = [1, 2, 3];
let { x, y = 1, z, default: defaultDefault } = undefined;
 
 
 
 
 
let {...v } = { x: 1 };
let {...v = x: 1 } = { x: 1 };
let {...y } = { x: 1 };
let {...y = y: 1 } = { x: 1 };
let {...z = z: 1 };
let {...m = m: 1 };
let m = { x: 1 };
let {...m = m = { x: 1 }, m } = { x: 1 };
let { x,...y } = { x: 1 };
let {...y = y = { x: 1 }, m

Execution Output ------------------:
test.js:24:11: error: '}' expected at end of object binding pattern '{...'
let {...v = x: 1 } = { x: 1 };
    ~~~~~~^
